--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask==2.3.2",
+    "gymnasium>=1.2.1",
+    "numpy>=2.3.4",
+    "stable-baselines3[extra]>=2.7.0",
+    "tqdm>=4.67.1",
 ]
