--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "flask==2.3.2",
     "gymnasium>=1.2.1",
+    "keyboard>=0.13.5",
     "numpy>=2.3.4",
+    "pynput>=1.8.1",
     "stable-baselines3[extra]>=2.7.0",
     "tqdm>=4.67.1",
 ]
